SalesforceFiles/retrieveOutput/objects/App__c.object
<CustomObject>
    <description>Database table that stores information on apps</description>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageName__c</fullName>
        <description>Name of the package in which the user&apos;s app is being developed.</description>
        <label>PackageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The string name of the version of the current app.</description>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>